--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Price List</title>
+    <title>Customer View</title>
 </head>
 <body>
-    <h1>Customer Price List</h1>
+    <h1>Price List</h1>
     <ul>
-        <% items.forEach(item => { %>
-            <li><%= item.name %> - ₹<%= item.price %></li>
-        <% }) %>
+        <% if (items.length === 0) { %>
+            <li>No items available</li>
+        <% } else { %>
+            <% items.forEach(item => { %>
+                <li><%= item.name %> - ₹<%= item.price %></li>
+            <% }) %>
+        <% } %>
     </ul>
+    <a href="/admin">Go to Admin</a>
 </body>
 </html>
