--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Price List</title>
+    <title>Customer View</title>
 </head>
 <body>
-    <h1>Customer Price List</h1>
+    <h1>Available Items</h1>
     <ul>
         <% items.forEach(item => { %>
             <li><%= item.name %> - ₹<%= item.price %></li>
